# ETAS

./: .Rbuildignore  .Rhistory  .gitattributes  .gitignor  .gitignore  .travis.yml  DESCRIPTION  ETAS.Rproj  NAMESPACE  README.md  cleanup  configure  configure.ac
.Rproj.user/8A4F6D4C/: persistent-state
.Rproj.user/8A4F6D4C/pcs/: files-pane.pper
.Rproj.user/8A4F6D4C/sdb/prop/: INDEX
.Rproj.user/8A4F6D4C/sdb/s-641880EF/: 5E95B9EA  6B79F50C  816FC666  A9589054  C87260F3
.Rproj.user/A63900DC/: persistent-state
.Rproj.user/A63900DC/pcs/: files-pane.pper
.Rproj.user/A63900DC/sdb/per/t/: 4F962717  5B23B150  71812117  C3A9DC44  CAD35672  E85F569E  EA302B59
.Rproj.user/A63900DC/sdb/prop/: INDEX
.github/workflows/: R-CMD-check.yml  R-CMD-check2.yml
R/: RcppExports.R  allanfactor.R  catalog.R  decluster.R  etas.R  etasfit.R  flatmap.R  lambda.R  lambdax.R  morisitaindex.R  poissontest.R  poisstest.R  rates.R  resid.etas.R  roundofferr.R  search.isc.R  simetas.R  ttrend.R
data/: .Rhistory  iran.quakes.rda  italy.quakes.rda  jap.quakes.rda  japan.quakes.rda
inst/: CITATION
man/: ETAS-internal.Rd  catalog.Rd  date2day.Rd  etas.Rd  etas.object.Rd  iran.quakes.Rd  italy.quakes.Rd  jap.quakes.Rd  japan.quakes.Rd  lambda.Rd  rates.Rd  resid.etas.Rd  search.isc.Rd
src/: .Rhistory  .fitMP.cpp.kate-swp  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  declust.c  dist.c  dist.h  fit.c  fitMP.cpp  funcs.h  lambda.c  lambda.h  poly.c  poly.h
vignettes/: etas.Rnw  usingETASWeapper.Rnw
